--- a/League/Views/Account/ForgotPassword.cshtml
+++ b/League/Views/Account/ForgotPassword.cshtml
@@ -6,7 +6,7 @@
 @model ForgotPasswordViewModel
 @{
     ViewData["Title"] = Localizer["Forgot your password?"];
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
 }
 <h2 class="h2">@(ViewData["Title"])</h2>
 <hr />
