--- a/League/Views/Error/AccessDenied.cshtml
+++ b/League/Views/Error/AccessDenied.cshtml
@@ -1,9 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @{
     ViewData["Title"] = Localizer["Access denied"];
     var returnUrl = ViewData["ReturnUrl"];
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
 }
 <h2 class="h2">@ViewData["Title"].</h2>
 <div class="pb-4">
