--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -1,8 +1,9 @@
 ﻿@using League.Controllers
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @model ChangePasswordViewModel
-@{var organizationRoute = ViewContext.RouteData.Values["organization"];}
+@{var organizationRoute = SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="change-password" title="@Localizer["Change Password"].Value" tabindex="-1">
     <modal-body>
