--- a/League/Views/Manage/_EditPhoneModalPartial.cshtml
+++ b/League/Views/Manage/_EditPhoneModalPartial.cshtml
@@ -1,11 +1,12 @@
 ﻿@using League.Controllers
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @model EditPhoneViewModel
 @{
     const string BtnRemove = "btn-remove";
     ViewContext.ClientValidationEnabled = true;
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
 }
 <!-- Modal -->
 <modal id="change-email" title="@Localizer["Change Primary Phone Number"].Value" tabindex="-1">
