--- a/League/Views/Manage/_SetPasswordModalPartial.cshtml
+++ b/League/Views/Manage/_SetPasswordModalPartial.cshtml
@@ -2,10 +2,11 @@
 @using League.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @inject UserManager<ApplicationUser> UserManager
 @{
     ViewData["Title"] = Localizer["Set Password"].Value;
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
     ViewContext.ClientValidationEnabled = true;
 }
 @model SetPasswordViewModel
