--- a/League/Views/Account/ConfirmEmailError.cshtml
+++ b/League/Views/Account/ConfirmEmailError.cshtml
@@ -1,11 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @{
     ViewData["Title"] = Localizer["Your email could not be confirmed"].Value;
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
 }
 <h2 class="h2">@ViewData["Title"].</h2>
-<hr/>
+<hr />
 <div>
     <site-alert type="Warning">
         @Localizer["Sorry, your email could not be confirmed. Possible causes"]:<br />
