--- a/League/Views/Account/ResetPassword.cshtml
+++ b/League/Views/Account/ResetPassword.cshtml
@@ -1,65 +1,66 @@
 ﻿@using League.Controllers
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @model ResetPasswordViewModel
 @{
     ViewData["Title"] = Localizer["Reset password"];
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
 }
 <div>
     <h2 class="h2">@ViewData["Title"]</h2>
-    <hr/>
-   <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" asp-route-organization="@organizationRoute" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
-       <site-validation-summary show="All">
-           <b>@Localizer["Input has some issues"]:</b>
-       </site-validation-summary>
-       <input asp-for="Code" type="hidden" />
-       <div class="form-group">
-           <label asp-for="EmailOrUsername"></label>
-           <div class="input-group">
-               <input asp-for="EmailOrUsername" class="form-control" required="required" type="text" />
-               <span class="input-group-append input-group-text">
-                   <i class="fas fa-user"></i>
-               </span>
-           </div>
-           <span asp-validation-for="EmailOrUsername" class="text-danger"></span>
-       </div>
-       <div class="form-group">
-           <label asp-for="Password"></label>
-           <div class="input-group">
-               <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
-               <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
-                   <i class="fas fa-eye"></i>
-               </span>
-           </div>
-           <span asp-validation-for="Password" class="text-danger"></span>
-           <small id="passwordHelpBlock" class="form-text text-muted">
-               <partial name="_passwordRules" />
-           </small>
-       </div>
-       <div class="form-group">
-           <label asp-for="ConfirmPassword"></label>
-           <div class="input-group">
-               <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
-               <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
-                   <i class="fas fa-eye"></i>
-               </span>
-           </div>
-           <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-       </div>
-       <div class="form-group">
-           <button type="submit" class="btn btn-lg btn-primary col-md-8 col-sm-10 col-12">@Localizer["Save new password"]</button>
-       </div>
-   </form>
+    <hr />
+    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" asp-route-organization="@organizationRoute" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+        <site-validation-summary show="All">
+            <b>@Localizer["Input has some issues"]:</b>
+        </site-validation-summary>
+        <input asp-for="Code" type="hidden" />
+        <div class="form-group">
+            <label asp-for="EmailOrUsername"></label>
+            <div class="input-group">
+                <input asp-for="EmailOrUsername" class="form-control" required="required" type="text" />
+                <span class="input-group-append input-group-text">
+                    <i class="fas fa-user"></i>
+                </span>
+            </div>
+            <span asp-validation-for="EmailOrUsername" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <div class="input-group">
+                <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
+                <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <i class="fas fa-eye"></i>
+                </span>
+            </div>
+            <span asp-validation-for="Password" class="text-danger"></span>
+            <small id="passwordHelpBlock" class="form-text text-muted">
+                <partial name="_passwordRules" />
+            </small>
+        </div>
+        <div class="form-group">
+            <label asp-for="ConfirmPassword"></label>
+            <div class="input-group">
+                <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
+                <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <i class="fas fa-eye"></i>
+                </span>
+            </div>
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-lg btn-primary col-md-8 col-sm-10 col-12">@Localizer["Save new password"]</button>
+        </div>
+    </form>
 </div>
 @section Scripts {
-@{
-    await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial);
-}
-<script type="text/javascript">
+    @{
+        await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial);
+    }
+    <script type="text/javascript">
     $('#@Html.IdFor(m => m.Password)').attr("type", "password");
     $('#@Html.IdFor(m => m.ConfirmPassword)').attr("type", "password");
     $('#@Html.IdFor(m => m.EmailOrUsername)').focus();
-</script>
+    </script>
 }
 
