--- a/League/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/League/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,11 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-@{
-    ViewData["Title"] = Localizer["New Password Confirmation"].Value;
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
-}
+@inject League.DI.SiteContext SiteContext
+@{ ViewData["Title"] = Localizer["New Password Confirmation"].Value;
+                var organizationRoute = SiteContext.UrlSegmentValue; }
 <h2 class="h2">@ViewData["Title"].</h2>
-<hr/>
+<hr />
 <div>
     <site-alert type="Success">
         @Localizer["The new password is saved and activated"].<br />
