--- a/League/Views/Account/SignIn.cshtml
+++ b/League/Views/Account/SignIn.cshtml
@@ -1,12 +1,14 @@
 @using League.Controllers
+@using League.DI
 @using League.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
 @model SignInViewModel
 @inject SignInManager<ApplicationUser> SignInManager
+@inject SiteContext SiteContext
 @inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = Localizer["Sign in"];
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
 }
 <h2 class="h2">@ViewData["Title"]</h2>
 @{
