--- a/League/Views/Manage/_DeleteAccountModalPartial.cshtml
+++ b/League/Views/Manage/_DeleteAccountModalPartial.cshtml
@@ -1,8 +1,9 @@
 ﻿@using League.Controllers
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @model ChangeEmailViewModel
-@{var organizationRoute = ViewContext.RouteData.Values["organization"];}
+@{var organizationRoute = SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="change-email" title="@Localizer["Delete Account"].Value" tabindex="-1">
     <modal-body>
