--- a/League/Views/Manage/_ManageLoginsModalPartial.cshtml
+++ b/League/Views/Manage/_ManageLoginsModalPartial.cshtml
@@ -1,8 +1,9 @@
 @using League.Controllers
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @model ManageLoginsViewModel
-@{var organizationRoute = ViewContext.RouteData.Values["organization"];}
+@{var organizationRoute = SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="change-email" title="@Localizer["Social Network Logins"].Value" tabindex="-1">
     <modal-body>
