--- a/League/Views/Match/Fixtures.cshtml
+++ b/League/Views/Match/Fixtures.cshtml
@@ -4,10 +4,11 @@
 @using TournamentManager.DAL.EntityClasses
 @using TournamentManager.DAL.TypedViewClasses
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @model League.Models.MatchViewModels.FixturesViewModel
 @{
     ViewData["Title"] = Localizer["Fixtures"].Value + " - " + Model.Tournament.Name;
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
     if (Model.PlannedMatches.Count == 0)
     {
         <div class="mb-0 pb-1">
@@ -48,7 +49,7 @@
     }
     MatchEntity ToMatchEntity(PlannedMatchRow pmr)
     {
-        return new MatchEntity{Id = pmr.Id, HomeTeamId = pmr.HomeTeamId, GuestTeamId = pmr.GuestTeamId, VenueId = pmr.VenueId };
+        return new MatchEntity { Id = pmr.Id, HomeTeamId = pmr.HomeTeamId, GuestTeamId = pmr.GuestTeamId, VenueId = pmr.VenueId };
     }
 }
 <div class="mb-0 pb-1">
@@ -109,11 +110,11 @@
                                                 <div class="dropdown-menu shadow-lg" role="menu">
                                                     <a href="#" tabindex="0" data-round-id="@match.RoundId" data-team-name="@match.HomeTeamNameForRound" class="dropdown-item filter-link">@Localizer["Filter fixtures for this team"]</a>
                                                     <a asp-action=@nameof(League.Controllers.Match.ReportSheet) asp-controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@match.Id tabindex="0" class="dropdown-item">@Localizer["Print match report sheet"]</a>
-                                                    <a asp-action=@nameof(League.Controllers.Match.EditFixture) asp-controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@match.Id tabindex="0" class="dropdown-item" 
-                                                       site-authorize-resource site-resource=@ToMatchEntity(match) 
+                                                    <a asp-action=@nameof(League.Controllers.Match.EditFixture) asp-controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@match.Id tabindex="0" class="dropdown-item"
+                                                       site-authorize-resource site-resource=@ToMatchEntity(match)
                                                        site-requirement=@League.Authorization.MatchOperations.ChangeFixture>@Localizer["Edit fixture"]</a>
-                                                    <a asp-action=@nameof(League.Controllers.Match.EnterResult) asp-controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@match.Id tabindex="0" class="dropdown-item" 
-                                                       site-authorize-resource site-resource="@ToMatchEntity(match)" 
+                                                    <a asp-action=@nameof(League.Controllers.Match.EnterResult) asp-controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@match.Id tabindex="0" class="dropdown-item"
+                                                       site-authorize-resource site-resource="@ToMatchEntity(match)"
                                                        site-requirement="@League.Authorization.MatchOperations.EnterResult">@Localizer["Enter match result"]</a>
                                                     <a asp-action=@nameof(League.Controllers.Match.Calendar) asp-Controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@match.Id tabindex="0" class="dropdown-item">@Localizer["Save match to calendar"]</a>
                                                 </div>
