--- a/League/Views/Team/Single.cshtml
+++ b/League/Views/Team/Single.cshtml
@@ -2,12 +2,13 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.DI
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @inject RegionInfo Region
 @inject PhoneNumberService PhoneNumberService
 @model League.Models.TeamViewModels.TeamSingleModel
 @{
     ViewData["Title"] = Localizer["Team Details"].Value + " - " + Model.Tournament.Name;
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
     string DisplayPhoneNo(string phoneNo)
     {
         return PhoneNumberService.Format(phoneNo, Region.TwoLetterISORegionName);
@@ -40,7 +41,8 @@
         {
             <div class="text-success col-md-3">@Localizer["Venue"]</div>
             <div class="col-md-7 mb-2">
-                <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block mr-2"></span><span class="font-weight-bold">@Model.TeamVenueRoundInfo.VenueName</span> <span>@{if (!string.IsNullOrWhiteSpace(Model.TeamVenueRoundInfo.VenueExtension)){<text>(@Model.TeamVenueRoundInfo.VenueExtension)</text>}}</span></div>
+                <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block mr-2"></span><span class="font-weight-bold">@Model.TeamVenueRoundInfo.VenueName</span> <span>@{if (!string.IsNullOrWhiteSpace(Model.TeamVenueRoundInfo.VenueExtension))
+                    {<text>(@Model.TeamVenueRoundInfo.VenueExtension)</text>}}</span></div>
                 <div>@(string.Join(", ", Model.TeamVenueRoundInfo.VenuePostalCode, Model.TeamVenueRoundInfo.VenueCity, Model.TeamVenueRoundInfo.VenueStreet))</div>
                 <div><a class="link" asp-action="@nameof(League.Controllers.Map.Venue)" asp-controller="@nameof(League.Controllers.Map)" asp-route-organization="@organizationRoute" asp-route-id="@Model.TeamVenueRoundInfo.VenueId.Value">@Localizer["Direction"]</a></div>
             </div>
