--- a/League/Views/Team/_EditTeamModalPartial.cshtml
+++ b/League/Views/Team/_EditTeamModalPartial.cshtml
@@ -3,8 +3,9 @@
 @using League.Controllers
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
+@inject League.DI.SiteContext SiteContext
 @model League.Models.TeamViewModels.TeamEditModel
-@{ ViewContext.ClientValidationEnabled = false; var organizationRoute = ViewContext.RouteData.Values["organization"];}
+@{ ViewContext.ClientValidationEnabled = false; var organizationRoute = SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="edit-team" title="@Localizer["Edit team"].Value" dialog-class="modal-xl" tabindex="-1">
     <modal-body>
@@ -31,10 +32,10 @@
     <modal-footer show-dismiss="true" dismiss-text="@Localizer["Cancel"].Value">
         <button site-ajax-submit class="btn btn-primary">@Localizer["Save"]</button>
         @{ if (ViewContext.ClientValidationEnabled)
-           {
-               /* register the modal form for validation */
-               <partial name="@nameof(League.ViewNames.Shared._ValidationScriptsPartial)" />
-           }
+            {
+                /* register the modal form for validation */
+                <partial name="@nameof(League.ViewNames.Shared._ValidationScriptsPartial)" />
+            }
         }
     </modal-footer>
 </modal>
