--- a/League/Views/TeamApplication/List.cshtml
+++ b/League/Views/TeamApplication/List.cshtml
@@ -7,7 +7,7 @@
 @model League.Models.TeamApplicationViewModels.ApplicationListModel
 @{
     ViewData["Title"] = Localizer["Team Registrations"].Value + " - " + Model.Tournament.Name;
-    var organizationRoute = ViewContext.RouteData.Values["organization"];
+    var organizationRoute = SiteContext.UrlSegmentValue;
     string ZonedTimeString(long teamId)
     {
         return Model.TimeZoneConverter.ToZonedTime(Model.TeamRegisteredOn[teamId]).DateTimeOffset.DateTime.ToShortDateString();
